configure_file: Add option to control file permissions transfer to copy

Issue: #20866